feat(消息功能): 新增语音消息、批量转发和收藏功能
新增语音消息录制与播放功能，支持批量转发消息(逐条/合并)，添加消息收藏标记功能。优化消息菜单操作，统一底部对话框UI规范，完善暗色模式适配。

重构Settings对话框导航布局，新增全局搜索、公告管理、语音转文字API。添加消息标记和待办功能，实现消息多选操作。移除废弃数据库表，更新相关SQL脚本。

新增VoiceRecorder组件实现语音录制，MessageBubble支持语音播放波形显示。扩展消息类型处理，优化消息输入框交互体验。添加相关测试用例和API文档。