@@ -14,6 +14,7 @@ import org.springframework.beans.BeanUtils;
 import org.springframework.web.bind.annotation.*;
 
 import javax.validation.Valid;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -61,7 +62,7 @@ public class ImExternalContactController {
      */
     private List<ImExternalContactVO> toVOList(List<ImExternalContact> list) {
         if (list == null || list.isEmpty()) {
-            return List.of();
+            return Collections.emptyList();
         }
         return list.stream()
                 .map(this::toVO)
@@ -91,7 +92,7 @@ public class ImExternalContactController {
      */
     private List<ImExternalContactGroupVO> toGroupVOList(List<ImExternalContactGroup> list) {
         if (list == null || list.isEmpty()) {
-            return List.of();
+            return Collections.emptyList();
         }
         return list.stream()
                 .map(this::toGroupVO)
